--- a/style.css
+++ b/style.css
@@ -60,13 +60,13 @@ h2:before {
 
 .landing__right {
   flex-basis: 50%;
-  background: #1DA1F2;
+  background: #0001ff;
   box-shadow: 0 -50vw 0 50vw rgba(0, 0, 0, 0);
 }
 
 .landing__right:hover {
   flex-basis: 150%;
-  background: #1DA1F2;
+  background: #001ff;
   box-shadow: 0 -50vw 0 50vw rgba(0, 0, 0, 0.7);
   color: white;
   z-index: 500;
